# extension_schema_grabber

./: .gitignore  README.md  config.yaml.template  pyproject.toml  settings.py
extension_schema_grabber/: get_schemas.py  main.py  requirements.txt  settings.py
extension_schema_grabber/tests/: test_extension_schema_grabber.py
