[tool.poetry]
name = "extension_schema_grabber"
version = "0.1.0"
description = ""
authors = ["Ben Davidson <32000249+tukanuk@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
